# flask-demo

./: .gitignore  Makefile  README.md  app.py  manage.py  pyproject.toml  requirements.txt  uwsgi.ini
app/: __init__.py  views.py
app/config/: config.py  config.py.default
flaskexample/: __init__.py  config.py  db.py  wsgi.py
flaskexample/auth/: __init__.py  views.py
flaskexample/blog/: models.py  views.py
flaskexample/templates/: 404.html  500.html
flaskr/: __init__.py
flaskr/auth/: __init__.py  models.py
myapp/: __init__.py
templates/: 404.html  500.html
tests/: conftest.py  test_auth.py  test_blog.py  test_db.py  test_factory.py
