[tool.poetry]
name = "flaskexample"
version = "0.1.0"
description = "This is a Python demo project with Flask"
authors = ["Yakir <yakir3@duck.com>"]
readme = "README.md"
#package-mode = false
#packages = [{include = ""}]

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
uwsgi = "^2.0.26"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
